packages/types/src/rmlui_bindings.rs

// Auto-generated by scripts/rmlui-bindgen — DO NOT EDIT
// Source: packages/types/src/rmlui-abi.h

use std::ffi::{CStr, CString};
use std::os::raw::c_char;

// ── Error Codes ────────────────────────────────────────────────────

#[repr(i32)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum RmluiError {
    Ok = 0,
    InvalidHandle = -1,
    NullParam = -2,
    OutOfMemory = -3,
    Unsupported = -4,
    Internal = -5,
}

impl From<i32> for RmluiError {
    fn from(code: i32) -> Self {
        match code {
            -1 => RmluiError::InvalidHandle,
            -2 => RmluiError::NullParam,
            -3 => RmluiError::OutOfMemory,
            -4 => RmluiError::Unsupported,
            -5 => RmluiError::Internal,
            _  => RmluiError::Ok,
        }
    }
}

// ── Raw extern "C" Declarations ─────────────────────────────────────

extern "C" {
    fn Rml_CreateContext(name: *const c_char, w: i32, h: i32) -> i32;
    fn Rml_ReleaseContext(ctx: i32) -> ();
    fn Rml_LoadDocument(ctx: i32, path: *const c_char) -> i32;
    fn Rml_LoadDocumentFromMemory(ctx: i32, rml: *const c_char, source_url: *const c_char) -> i32;
    fn Rml_LoadDocumentFromBuffer(ctx: i32, data: *const c_void, len: i32) -> i32;
    fn Rml_ShowDocument(doc: i32) -> ();
    fn Rml_HideDocument(doc: i32) -> ();
    fn Rml_CloseDocument(doc: i32) -> ();
    fn Rml_GetNumDocuments(ctx: i32) -> i32;
    fn Rml_GetDocument(ctx: i32, index: i32) -> i32;
    fn Rml_CreateElement(tag: *const c_char) -> i32;
    fn Rml_CreateTextNode(text: *const c_char) -> i32;
    fn Rml_AppendChild(parent: i32, child: i32) -> i32;
    fn Rml_RemoveChild(parent: i32, child: i32) -> i32;
    fn Rml_InsertBefore(parent: i32, child: i32, ref: i32) -> i32;
    fn Rml_ReplaceChild(parent: i32, newChild: i32, oldChild: i32) -> i32;
    fn Rml_SetAttribute(el: i32, name: *const c_char, value: *const c_char) -> i32;
    fn Rml_GetAttribute(el: i32, name: *const c_char) -> *const c_char;
    fn Rml_RemoveAttribute(el: i32, name: *const c_char) -> i32;
    fn Rml_HasAttribute(el: i32, name: *const c_char) -> i32;
    fn Rml_SetTextContent(el: i32, text: *const c_char) -> i32;
    fn Rml_GetTextContent(el: i32) -> *const c_char;
    fn Rml_SetInnerHTML(el: i32, html: *const c_char) -> i32;
    fn Rml_GetInnerHTML(el: i32) -> *const c_char;
    fn Rml_SetStyleProperty(el: i32, prop: *const c_char, value: *const c_char) -> i32;
    fn Rml_GetStyleProperty(el: i32, prop: *const c_char) -> *const c_char;
    fn Rml_SetStyle(el: i32, css_text: *const c_char) -> i32;
    fn Rml_AddEventListener(el: i32, event: *const c_char, cb_id: i32) -> i32;
    fn Rml_RemoveEventListener(el: i32, event: *const c_char) -> i32;
    fn Rml_GetCurrentEvent() -> i32;
    fn Rml_SetClass(el: i32, cls: *const c_char, enabled: i32) -> i32;
    fn Rml_IsClassSet(el: i32, cls: *const c_char) -> i32;
    fn Rml_SetClassNames(el: i32, names: *const c_char) -> i32;
    fn Rml_LoadFont(path: *const c_char) -> i32;
    fn Rml_LoadFontFromBuffer(name: *const c_char, data: *const c_void, len: i32) -> i32;
    fn Rml_LoadTexture(path: *const c_char) -> i32;
    fn Rml_LoadTextureFromBuffer(name: *const c_char, data: *const c_void, len: i32) -> i32;
    fn Rml_GetTextureDimensions(name: *const c_char, w: i32, h: i32) -> i32;
    fn RmlUI_ProcessSdlEvents() -> ();
    fn RmlUI_Update() -> ();
    fn RmlUI_Render() -> ();
    fn RmlUI_Shutdown() -> ();
    fn RmlUI_IsRunning() -> i32;
    fn Rml_GetElementById(ctx: i32, id: *const c_char) -> i32;
    fn Rml_QuerySelector(el: i32, selector: *const c_char) -> i32;
    fn Rml_QuerySelectorAll(el: i32, selector: *const c_char) -> i32;
    fn Rml_FreeNodeList(elements: i32) -> ();
    fn Rml_GetBody(ctx: i32) -> i32;
    fn Rml_GetHead(ctx: i32) -> i32;
    fn Rml_SetResourcePath(ctx: i32, path_list: *const c_char) -> i32;
    fn Rml_RegisterResourceProvider(ctx: i32, provider: i32) -> i32;
    fn Rml_DebuggerToggle() -> ();
}

// ── Safe Wrapper Functions ──────────────────────────────────────────

/// Safe wrapper around `Rml_CreateContext`.
pub fn rml_create_context(name: &str, w: i32, h: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_CreateContext(CString::new(name).map_err(|_| RmluiError::NullParam)?.as_ptr(), w, h) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_ReleaseContext`.
pub fn rml_release_context(ctx: i32) -> () {
    unsafe { Rml_ReleaseContext(ctx) }
}

/// Safe wrapper around `Rml_LoadDocument`.
pub fn rml_load_document(ctx: i32, path: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_LoadDocument(ctx, CString::new(path).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_LoadDocumentFromMemory`.
pub fn rml_load_document_from_memory(ctx: i32, rml: &str, source_url: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_LoadDocumentFromMemory(ctx, CString::new(rml).map_err(|_| RmluiError::NullParam)?.as_ptr(), CString::new(source_url).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_LoadDocumentFromBuffer`.
pub fn rml_load_document_from_buffer(ctx: i32, data: &[u8], len: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_LoadDocumentFromBuffer(ctx, data.as_ptr() as *const std::ffi::c_void, len) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_ShowDocument`.
pub fn rml_show_document(doc: i32) -> () {
    unsafe { Rml_ShowDocument(doc) }
}

/// Safe wrapper around `Rml_HideDocument`.
pub fn rml_hide_document(doc: i32) -> () {
    unsafe { Rml_HideDocument(doc) }
}

/// Safe wrapper around `Rml_CloseDocument`.
pub fn rml_close_document(doc: i32) -> () {
    unsafe { Rml_CloseDocument(doc) }
}

/// Safe wrapper around `Rml_GetNumDocuments`.
pub fn rml_get_num_documents(ctx: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_GetNumDocuments(ctx) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_GetDocument`.
pub fn rml_get_document(ctx: i32, index: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_GetDocument(ctx, index) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_CreateElement`.
pub fn rml_create_element(tag: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_CreateElement(CString::new(tag).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_CreateTextNode`.
pub fn rml_create_text_node(text: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_CreateTextNode(CString::new(text).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_AppendChild`.
pub fn rml_append_child(parent: i32, child: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_AppendChild(parent, child) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_RemoveChild`.
pub fn rml_remove_child(parent: i32, child: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_RemoveChild(parent, child) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_InsertBefore`.
pub fn rml_insert_before(parent: i32, child: i32, ref: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_InsertBefore(parent, child, ref) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_ReplaceChild`.
pub fn rml_replace_child(parent: i32, newChild: i32, oldChild: i32) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_ReplaceChild(parent, newChild, oldChild) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_SetAttribute`.
pub fn rml_set_attribute(el: i32, name: &str, value: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_SetAttribute(el, CString::new(name).map_err(|_| RmluiError::NullParam)?.as_ptr(), CString::new(value).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_GetAttribute`.
pub fn rml_get_attribute(el: i32, name: &str) -> Result<Option<String>, RmluiError> {
    let ptr = unsafe { Rml_GetAttribute(el, CString::new(name).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if ptr.is_null() {
        Ok(None)
    } else {
        let s = unsafe { CStr::from_ptr(ptr) };
        Ok(Some(s.to_string_lossy().into_owned()))
    }
}

/// Safe wrapper around `Rml_RemoveAttribute`.
pub fn rml_remove_attribute(el: i32, name: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_RemoveAttribute(el, CString::new(name).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_HasAttribute`.
pub fn rml_has_attribute(el: i32, name: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_HasAttribute(el, CString::new(name).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_SetTextContent`.
pub fn rml_set_text_content(el: i32, text: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_SetTextContent(el, CString::new(text).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_GetTextContent`.
pub fn rml_get_text_content(el: i32) -> Result<Option<String>, RmluiError> {
    let ptr = unsafe { Rml_GetTextContent(el) };
    if ptr.is_null() {
        Ok(None)
    } else {
        let s = unsafe { CStr::from_ptr(ptr) };
        Ok(Some(s.to_string_lossy().into_owned()))
    }
}

/// Safe wrapper around `Rml_SetInnerHTML`.
pub fn rml_set_inner_html(el: i32, html: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_SetInnerHTML(el, CString::new(html).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}

/// Safe wrapper around `Rml_GetInnerHTML`.
pub fn rml_get_inner_html(el: i32) -> Result<Option<String>, RmluiError> {
    let ptr = unsafe { Rml_GetInnerHTML(el) };
    if ptr.is_null() {
        Ok(None)
    } else {
        let s = unsafe { CStr::from_ptr(ptr) };
        Ok(Some(s.to_string_lossy().into_owned()))
    }
}

/// Safe wrapper around `Rml_SetStyleProperty`.
pub fn rml_set_style_property(el: i32, prop: &str, value: &str) -> Result<i32, RmluiError> {
    let result = unsafe { Rml_SetStyleProperty(el, CString::new(prop).map_err(|_| RmluiError::NullParam)?.as_ptr(), CString::new(value).map_err(|_| RmluiError::NullParam)?.as_ptr()) };
    if result >= 0 {
        Ok(result)
    } else {
        Err(RmluiError::from(result))
    }
}
